force-app/main/default/objects/Wrike_Folder_Template__c/Wrike_Folder_Template__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Wrike Folder Template</label>
</CustomObject>