force-app/main/default/objects/Wrike_Folder_Template__c/fields/Wrike_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Folder_Id__c</fullName>
    <label>Wrike Folder Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>