force-app/main/default/objects/Wrike_Folder_Template__c/fields/Wrike_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Folder_Name__c</fullName>
    <label>Wrike Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>