force-app/main/default/objects/Wrike_Folder_Template__c/fields/Wrike_Folder_Permalink__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Folder_Permalink__c</fullName>
    <label>Wrike Folder Permalink</label>
    <type>Url</type>
</CustomField>